<resources>
    <string name="app_name">ShoList</string>


    <!--Strings to Navigation menu items-->

    <string name="nav_List">Lists</string>
    <string name="nav_Template">Template</string>
    <string name="nav_Home">Home</string>

    <string name="nav_Themes">Themes</string>

    <string name="nav_About">About</string>
    <string name="nav_About_App">About this app</string>
    <string name="nav_About_Us">About us</string>

    <string name="image_Description">Image</string>
    <string name="version">Version: Beta</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <!--Strings to default list item table-->

    <string name="default_list_name">List Name</string>
    <string name="default_list_date">Mon 00/00/0000</string>
    <string name="default_total_value">Total: 0</string>

    <!--Strings to button-->

    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_add">Add</string>

    <!--Strings to Activity Table-->

    <string name="list_name">List\'s Name</string>
    <string name="list_name_hint">Write the List\'s Name</string>

    <!-- Strings to Activity Item List View -->

    <string name="Item_default_text">Default text for a item.</string>
    <string name="price">Price:</string>
    <string name="count">Count:</string>
    <string name="total">Total:</string>
    <string name="default_values">0</string>


    <!-- Strings to Activity Item -->

    <string name="label_item_name">Item\'s Name</string>
    <string name="hint_item_name">Write the item\'s name</string>
    <string name="label_item_price">Price</string>
    <string name="hint_item_price">Write the item\'s price</string>
    <string name="label_item_count">Count</string>
    <string name="hint_item_count">Write the number of items</string>
    <string name="get_total">Get total</string>

    <!-- Strings to Fragment About-->

    <string name="About_us">I am a programming student at the National University of Engineering (UNI) of Nicaragua, in my third year of computer engineering, I have done several things throughout my life. This being one of the many things I have done.</string>

    <string name="LinkToSite">

        <a href="https://linktr.ee/j2rg3n">Develop by: Jurgen Bermudez</a>

    </string>

    <string name="About_app">This is a personal project in which it is intended to make an application where people make lists of the products they want to buy in different specific areas that one wants.</string>

    <!-- Strings to use in code -->

    <string name="Add_list_tittle">Add List</string>
    <string name="Add_item_tittle">Add Item</string>

    <string name="Edit_list_tittle">Edit List</string>
    <string name="Edit_item_tittle">Edit Item</string>

    <!-- Strings to send to a message -->

    <string name="Message1">Fatal Error, to update Total List, Please contact with developer</string>
    <string name="Message2">Fatal Error, fragment no exist, Please contact with developer</string>
    <string name="Message3">Failed to save data, Please contact with developer</string>
    <string name="Message4">Fatal error Id = -1, Please contact with developer</string>
    <string name="Message5">Fatal error, no edit action no add action, Please contact with developer</string>
    <string name="Message6">Fatal error, IdTable = -1, Please contact with developer</string>
    <string name="Message7">Failed to update data, Please contact with developer</string>
    <string name="Message8">Fatal Error, Table Doesn\'t update, Please contact with developer</string>
    <string name="Message9">Error update data, Please contact with developer</string>
    <string name="Message10">Error to delete. Please contact with developer</string>

    <!-- Strings to message to User Errors-->

    <string name="UserMessage1">A field is empty.</string>
    <string name="UserMessage2">The list was added.</string>
    <string name="UserMessage3">Data was updated.</string>
    <string name="UserMessage4">Item was added.</string>
    <string name="UserMessage5">Item was updated.</string>
    <string name="UserMessage6">Invalid values.</string>

    <string name="UserMessage7">Delete this List?</string>
    <string name="UserMessage8">List was delete.</string>

    <string name="UserMessage9">Delete this Item?</string>
    <string name="UserMessage10">Item was delete.</string>

    <!-- Others Strings-->

    <string name="Yes"> yes </string>
    <string name="default_value">1</string>


</resources>