<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_Action_item"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="367dp"
                android:layout_height="62dp"
                android:layout_marginBottom="64dp"
                android:text="@string/btn_add"
                android:textSize="15sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/Green_1" />

            <TextView
                android:id="@+id/txtLabelName"
                android:layout_width="370dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"

                android:text="@string/label_item_name"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_Name_Item"
                android:layout_width="370dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/hint_item_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLabelName"
                android:importantForAutofill="no"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="370dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_item_price"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_Name_Item" />

            <EditText
                android:id="@+id/txt_Price_Item"
                android:layout_width="370dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/hint_item_price"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="370dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_item_count"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_Price_Item" />

            <EditText
                android:id="@+id/txt_Count_Item"
                android:layout_width="370dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/hint_item_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:importantForAutofill="no" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>