<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Card_View"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20sp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/ic_baseline_list_24"
                android:contentDescription="@string/image_Description"/>


            <TextView
                android:id="@+id/List_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_list_name"
                android:layout_marginStart="4dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/iconImageView"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/Total_Value_List"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_total_value"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@id/iconImageView"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap"/>


        </RelativeLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>